# energy-ops

./: .flake8  .pre-commit-config.yaml  README.md  mlflow.db  pre-commit-config.yaml  pyproject.toml
conf/base/: catalog.yml  parameters.yml
src/energy_ops/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/energy_ops/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/energy_ops/pipelines/data_science/: __init__.py  nodes.py  pipeline copy.py  pipeline.py
src/energy_ops/pipelines/deployment/: nodes.py  pipeline.py
src/energy_ops/pipelines/loading/: nodes.py  pipeline.py
tests/pipelines/loading/: conftest.py  test_nodes.py  test_pipeline.py
