[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "energy_ops"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro[jupyter]~=0.19.11", "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset]>=3.0", "kedro-viz>=6.7.0", "scikit-learn~=1.5.1",]

[project.scripts]
energy-ops = "energy_ops.__main__:main"

[tool.kedro]
package_name = "energy_ops"
project_name = "energy_ops"
kedro_init_version = "0.19.11"
tools = "['None']"
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "energy_ops.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "23a06381055c4620a89f4ed70799ff93"
